# MoneyCounter

./: CMakeLists.txt  README.md
res/: app_icon.aps  app_icon.rc  resources.qrc
src/: AddExpenses.cpp  AddExpenses.h  CategoryData.cpp  CategoryData.h  ChangeTypeDate.cpp  ChangeTypeDate.h  DatabaseManager.cpp  DatabaseManager.h  MainWindow.cpp  MainWindow.h  PasswordEntry.cpp  PasswordEntry.h  RegistrationWindow.cpp  RegistrationWindow.h  Square.cpp  Square.h  main.cpp
